--- a/BookManagementSystem/BooksWebApp/Views/Shared/_Layout.cshtml
+++ b/BookManagementSystem/BooksWebApp/Views/Shared/_Layout.cshtml
@@ -29,6 +29,9 @@
                             <a class="nav-link text-dark" asp-controller="book" asp-action="Index">Books</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="user" asp-action="Index">Users</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
